--- a/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/evidence/evidence.component.html
@@ -8,6 +8,7 @@
 <div class="d-flex mt-4 flex-column flex-xl-row justify-content-between">
   <div class="mr-xl-4 mr-0 mb-4 mb-xl-0">
     <p-editor
+      styleClass="p-editor-override"
       [style]="{ height: '210px', width: '100%', 'font-size': '25px' }"
       [(ngModel)]="sgqServ.sgq.text_area1"
       [modules]="{ counter: { container: '#counterEv', unit: 'character' } }"
