--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -1,214 +1,258 @@
 <div *ngIf="!aboutSrv.nc?.sgqEvaluation">
-    <div class="d-flex flex-lg-row flex-column justify-content-between">
-        <div class="d-flex">
-            <div class="cabecalho">
-                <div class="d-flex align-items-center">
-                    <h1 class="mr-3">{{'about.sgqEval'| translate}}</h1>
-                </div>
-                <p>
-                    {{'about.sgqEvalComponent.subtitle'| translate}}
-                </p>
-            </div>
+  <div class="d-flex flex-lg-row flex-column justify-content-between">
+    <div class="d-flex">
+      <div class="cabecalho">
+        <div class="d-flex align-items-center">
+          <h1 class="mr-3">{{ "about.sgqEval" | translate }}</h1>
         </div>
-
+        <p>
+          {{ "about.sgqEvalComponent.subtitle" | translate }}
+        </p>
+      </div>
     </div>
+  </div>
 
-    <div class="text-center">
-        <button type="button" class="btn btn-dark" style="background-color: #00344D;" [disabled]="!(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length>0)" routerLink="../../sgq/{{id}}">
-            {{'about.sgqEvalComponent.createBtn'| translate}}
-            <i class="bi bi-file-earmark-medical"></i>
-        </button>
-    </div>
+  <div class="text-center">
+    <button
+      type="button"
+      class="btn btn-dark"
+      style="background-color: #00344d"
+      [disabled]="
+        !(aboutSrv.nc?.proposalSolution && aboutSrv.nc?.costs?.length > 0)
+      "
+      routerLink="../../sgq/{{ id }}"
+    >
+      {{ "about.sgqEvalComponent.createBtn" | translate }}
+      <i class="bi bi-file-earmark-medical"></i>
+    </button>
+  </div>
 </div>
 <div *ngIf="aboutSrv.nc?.sgqEvaluation">
-    <div class="d-flex flex-lg-row flex-column justify-content-between">
-        <div class="d-flex">
-            <div class="cabecalho">
-                <div class="d-flex align-items-center">
-                    <h1 class="mr-3">{{'about.sgqEval'| translate}}</h1>
-                </div>
-                <p>
-                    {{'about.sgqEvalComponent.subtitle'| translate}}
-                </p>
-            </div>
+  <div class="d-flex flex-lg-row flex-column justify-content-between">
+    <div class="d-flex">
+      <div class="cabecalho">
+        <div class="d-flex align-items-center">
+          <h1 class="mr-3">{{ "about.sgqEval" | translate }}</h1>
         </div>
-        <div class="d-flex justify-content-end align-items-center mb-3">
-            <button
-                    [class]="isAllOpen ? selectedClass : unselectedClass"
-                    class="mr-2 btn-sm"
-                    (click)="isAllOpen = true"
-            >
-                <i class="bi bi-arrows-expand"></i>
-                {{'global.expand'| translate}}
-            </button>
-            <button
-                    [class]="isAllOpen ? unselectedClass : selectedClass"
-                    (click)="isAllOpen = false"
-                    class="btn-sm"
-            >
-                <i class="bi bi-arrows-collapse"></i>
-                {{'global.colapse'| translate}}
-            </button>
-            <button class="btn btn-dark btn-sm ml-3" style="background-color: #00344D;" routerLink="../../sgq/{{id}}">
-                {{'about.sgqEvalComponent.editBtn'| translate}}
-                <i class="bi bi-pencil-square"></i>
-            </button>
-        </div>
+        <p>
+          {{ "about.sgqEvalComponent.subtitle" | translate }}
+        </p>
+      </div>
     </div>
-    <p-accordion [multiple]="true">
-        <p-accordionTab [selected]="isAllOpen">
+    <div class="d-flex justify-content-end align-items-center mb-3">
+      <button
+        [class]="isAllOpen ? selectedClass : unselectedClass"
+        class="mr-2 btn-sm"
+        (click)="isAllOpen = true"
+      >
+        <i class="bi bi-arrows-expand"></i>
+        {{ "global.expand" | translate }}
+      </button>
+      <button
+        [class]="isAllOpen ? unselectedClass : selectedClass"
+        (click)="isAllOpen = false"
+        class="btn-sm"
+      >
+        <i class="bi bi-arrows-collapse"></i>
+        {{ "global.colapse" | translate }}
+      </button>
+      <button
+        class="btn btn-dark btn-sm ml-3"
+        style="background-color: #00344d"
+        routerLink="../../sgq/{{ id }}"
+      >
+        {{ "about.sgqEvalComponent.editBtn" | translate }}
+        <i class="bi bi-pencil-square"></i>
+      </button>
+    </div>
+  </div>
+  <p-accordion [multiple]="true">
+    <p-accordionTab [selected]="isAllOpen">
+      <ng-template pTemplate="header">
+        <div class="d-flex justify-content-between accordion">
+          <p>
+            <i class="bi bi-link-45deg"></i>
+            {{ "about.sgqEvalComponent.recurrence.title" | translate }}
+          </p>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="content">
+        <div class="card">
+          <p-table [value]="aboutSrv.nc.sgqEvaluation.recurrence || []">
             <ng-template pTemplate="header">
-                <div class="d-flex justify-content-between accordion">
-                    <p>
-                        <i class="bi bi-link-45deg"></i>
-                        {{'about.sgqEvalComponent.recurrence.title'| translate}}
-                    </p>
-                </div>
+              <tr>
+                <th>{{ "global.number" | translate }}</th>
+                <th>{{ "newNC.review.issuer" | translate }}</th>
+                <th>
+                  {{ "about.sgqEvalComponent.recurrence.type" | translate }}
+                </th>
+                <th>
+                  {{ "about.sgqEvalComponent.recurrence.sector" | translate }}
+                </th>
+                <th>
+                  {{ "about.sgqEvalComponent.recurrence.product" | translate }}
+                </th>
+                <th>{{ "global.status" | translate }}</th>
+                <th>{{ "about.sgqEvalComponent.deadline" | translate }}</th>
+                <th></th>
+              </tr>
             </ng-template>
-            <ng-template pTemplate="content">
-                <div class="card">
-                    <p-table [value]="aboutSrv.nc.sgqEvaluation.recurrence||[]">
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th>{{'global.number'| translate}}</th>
-                                <th>{{'newNC.review.issuer'| translate}}</th>
-                                <th>{{'about.sgqEvalComponent.recurrence.type'| translate}}</th>
-                                <th>{{'about.sgqEvalComponent.recurrence.sector'| translate}}</th>
-                                <th>{{'about.sgqEvalComponent.recurrence.product'| translate}}</th>
-                                <th>{{'global.status'| translate}}</th>
-                                <th>{{'about.sgqEvalComponent.deadline'| translate}}</th>
-                                <th></th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-nc let-i="rowIndex">
-                            <tr>
-                            <tr>
-                                <td>{{ nc.code }}</td>
-                                <td>{{ nc.emissor?.username }}</td>
-                                <td>{{ nc.tipos_nc_item }}</td>
-                                <td>{{ nc.tipos_local_item }}</td>
-                                <td>{{ nc.product?.name || nc.product?.description }}</td>
+            <ng-template pTemplate="body" let-nc let-i="rowIndex">
+              <tr></tr>
+              <tr>
+                <td>{{ nc.code }}</td>
+                <td>{{ nc.emissor?.username }}</td>
+                <td>{{ nc.tipos_nc_item }}</td>
+                <td>{{ nc.tipos_local_item }}</td>
+                <td>{{ nc.product?.name || nc.product?.description }}</td>
 
-                                <td>
-                    <span [ngSwitch]="nc.status" >
-                        <span *ngSwitchCase="'open'"> {{'global.status1'| translate}}</span>
-                        <span *ngSwitchCase="'running'">{{'global.status2'| translate}}</span>
-                        <span *ngSwitchCase="'late'"> {{'global.status3'| translate}}</span>
-                        <span *ngSwitchCase="'deleted'"> {{'global.status4'| translate}}</span>
-                        <span *ngSwitchCase="'archived'"> {{'global.status5'| translate}}</span>
-                        <span *ngSwitchCase="'canceled'"> {{'global.status6'| translate}}</span>
-                        <span *ngSwitchCase="'closed'"> {{'global.status7'| translate}}</span>
-                    </span>
-                                </td>
-                                <td>{{ parseDate(nc.data_fechamento||"")||"00/00/0000" }}</td>
-                                <td>
-                                    <button
-                                            pButton
-                                            type="button"
-                                            icon="bi bi-info-circle"
-                                            class="p-button-secondary p-button-text"
-                                            (click)="details(nc)"
-                                    ></button>
-                                </td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                </div>
-            </ng-template>
-        </p-accordionTab>
-        <p-accordionTab [selected]="isAllOpen">
-            <ng-template pTemplate="header">
-                <div class="d-flex justify-content-between accordion">
-                    <p>
-                        <i class="pi pi-compass"></i>
-                        {{'about.sgqEvalComponent.evidence'| translate}}
-                    </p>
-                </div>
-            </ng-template>
-            <ng-template pTemplate="content">
-                <div class="mb-5">
-                    <p-editor [ngModel]="aboutSrv.nc.sgqEvaluation.text_area1" [style]="editorStyle" [readonly]="true">
-                        <ng-template pTemplate="header">
-                        </ng-template>
-                    </p-editor>
-                </div>
-                <div class="mt-5 mb-3">
-                    <p-carousel
-                            [value]="aboutSrv.nc.sgqEvaluation.attachments"
-                            [numVisible]="4"
-                            [numScroll]="4"
-                            [showIndicators]="false"
-
+                <td>
+                  <span [ngSwitch]="nc.status">
+                    <span *ngSwitchCase="'open'">
+                      {{ "global.status1" | translate }}</span
                     >
-                        <ng-template let-file pTemplate="item">
-                            <i class="bi bi-file-earmark fs-1"></i>
-                            <p>{{ file.name }}</p>
-                        </ng-template>
-                    </p-carousel>
-                </div>
+                    <span *ngSwitchCase="'running'">{{
+                      "global.status2" | translate
+                    }}</span>
+                    <span *ngSwitchCase="'late'">
+                      {{ "global.status3" | translate }}</span
+                    >
+                    <span *ngSwitchCase="'deleted'">
+                      {{ "global.status4" | translate }}</span
+                    >
+                    <span *ngSwitchCase="'archived'">
+                      {{ "global.status5" | translate }}</span
+                    >
+                    <span *ngSwitchCase="'canceled'">
+                      {{ "global.status6" | translate }}</span
+                    >
+                    <span *ngSwitchCase="'closed'">
+                      {{ "global.status7" | translate }}</span
+                    >
+                  </span>
+                </td>
+                <td>
+                  {{ parseDate(nc.data_fechamento || "") || "00/00/0000" }}
+                </td>
+                <td>
+                  <button
+                    pButton
+                    type="button"
+                    icon="bi bi-info-circle"
+                    class="p-button-secondary p-button-text"
+                    (click)="details(nc)"
+                  ></button>
+                </td>
+              </tr>
             </ng-template>
-        </p-accordionTab>
-        <p-accordionTab [selected]="isAllOpen">
+          </p-table>
+        </div>
+      </ng-template>
+    </p-accordionTab>
+    <p-accordionTab [selected]="isAllOpen">
+      <ng-template pTemplate="header">
+        <div class="d-flex justify-content-between accordion">
+          <p>
+            <i class="pi pi-compass"></i>
+            {{ "about.sgqEvalComponent.evidence" | translate }}
+          </p>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="content">
+        <div class="mb-5">
+          <p-editor
+            styleClass="p-editor-override"
+            [ngModel]="aboutSrv.nc.sgqEvaluation.text_area1"
+            [style]="editorStyle"
+            [readonly]="true"
+          >
+            <ng-template pTemplate="header"> </ng-template>
+          </p-editor>
+        </div>
+        <div class="mt-5 mb-3">
+          <p-carousel
+            [value]="aboutSrv.nc.sgqEvaluation.attachments"
+            [numVisible]="4"
+            [numScroll]="4"
+            [showIndicators]="false"
+          >
+            <ng-template let-file pTemplate="item">
+              <i class="bi bi-file-earmark fs-1"></i>
+              <p>{{ file.name }}</p>
+            </ng-template>
+          </p-carousel>
+        </div>
+      </ng-template>
+    </p-accordionTab>
+    <p-accordionTab [selected]="isAllOpen">
+      <ng-template pTemplate="header">
+        <div class="d-flex justify-content-between accordion">
+          <p>
+            <i class="pi pi-compass"></i>
+            {{ "about.sgqEvalComponent.risks" | translate }}
+          </p>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="content">
+        <p-editor
+          styleClass="p-editor-override"
+          [ngModel]="aboutSrv.nc.sgqEvaluation.text_area2"
+          [style]="editorStyle"
+          [readonly]="true"
+        >
+          <ng-template pTemplate="header"> </ng-template>
+        </p-editor>
+      </ng-template>
+    </p-accordionTab>
+    <p-accordionTab [selected]="isAllOpen">
+      <ng-template pTemplate="header">
+        <div class="d-flex justify-content-between accordion">
+          <p>
+            <i class="bi bi-envelope-exclamation"></i>
+            {{ "about.sgqEvalComponent.changes" | translate }}
+          </p>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="content">
+        <p-editor
+          styleClass="p-editor-override"
+          [ngModel]="aboutSrv.nc.sgqEvaluation.text_area3"
+          [style]="editorStyle"
+          [readonly]="true"
+        >
+          <ng-template pTemplate="header"> </ng-template>
+        </p-editor>
+      </ng-template>
+    </p-accordionTab>
+    <p-accordionTab [selected]="isAllOpen">
+      <ng-template pTemplate="header">
+        <div class="d-flex justify-content-between accordion">
+          <p>
+            <i class="bi bi-envelope"></i>
+            {{ "global.contacts.notifications" | translate }}
+          </p>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="content">
+        <div class="card">
+          <p-table [value]="getContacts()">
             <ng-template pTemplate="header">
-                <div class="d-flex justify-content-between accordion">
-                    <p>
-                        <i class="pi pi-compass"></i>
-                        {{'about.sgqEvalComponent.risks'| translate}}
-                    </p>
-                </div>
+              <tr>
+                <th>{{ "global.contacts.name" | translate }}</th>
+                <th>{{ "global.contacts.email" | translate }}</th>
+                <th>{{ "global.contacts.partner" | translate }}</th>
+              </tr>
             </ng-template>
-            <ng-template pTemplate="content">
-                <p-editor [ngModel]="aboutSrv.nc.sgqEvaluation.text_area2" [style]="editorStyle" [readonly]="true">
-                    <ng-template pTemplate="header">
-                    </ng-template>
-                </p-editor>
+            <ng-template pTemplate="body" let-contact let-i="rowIndex">
+              <tr>
+                <td>{{ contact.name }}</td>
+                <td>{{ contact.email }}</td>
+                <td>{{ contact.type }}</td>
+              </tr>
             </ng-template>
-        </p-accordionTab>
-        <p-accordionTab [selected]="isAllOpen">
-            <ng-template pTemplate="header">
-                <div class="d-flex justify-content-between accordion">
-                    <p>
-                        <i class="bi bi-envelope-exclamation"></i>
-                        {{'about.sgqEvalComponent.changes'| translate}}
-                    </p>
-                </div>
-            </ng-template>
-            <ng-template pTemplate="content">
-                <p-editor [ngModel]="aboutSrv.nc.sgqEvaluation.text_area3" [style]="editorStyle" [readonly]="true">
-                    <ng-template pTemplate="header">
-                    </ng-template>
-                </p-editor>
-            </ng-template>
-        </p-accordionTab>
-        <p-accordionTab [selected]="isAllOpen">
-            <ng-template pTemplate="header">
-                <div class="d-flex justify-content-between accordion">
-                    <p>
-                        <i class="bi bi-envelope"></i>
-                        {{'global.contacts.notifications'| translate}}
-                    </p>
-                </div>
-            </ng-template>
-            <ng-template pTemplate="content">
-                <div class="card">
-                    <p-table [value]="getContacts()">
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th>{{'global.contacts.name'| translate}}</th>
-                                <th>{{'global.contacts.email'| translate}}</th>
-                                <th>{{'global.contacts.partner'| translate}}</th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-contact let-i="rowIndex">
-                            <tr>
-                                <td>{{ contact.name }}</td>
-                                <td>{{ contact.email }}</td>
-                                <td>{{ contact.type }}</td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                </div>
-            </ng-template>
-        </p-accordionTab>
-    </p-accordion>
+          </p-table>
+        </div>
+      </ng-template>
+    </p-accordionTab>
+  </p-accordion>
 </div>
