--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -4,12 +4,12 @@
       <button
         type="button"
         class="btn btn-dark btn-sm"
-        style="background-color: #00344D;"
+        style="background-color: #00344d"
         (click)="backStep()"
         [disabled]="isFirstStep()"
       >
         <i class="pi pi-arrow-left"></i>
-        {{'global.back'| translate}}
+        {{ "global.back" | translate }}
       </button>
     </div>
     <div class="stepper">
@@ -25,7 +25,7 @@
         <button
           type="button"
           (click)="nextStep()"
-          style="background-color: #00344D;"
+          style="background-color: #00344d"
           [disabled]="disableButton()"
           class="btn btn-dark btn-sm"
         >
@@ -34,13 +34,14 @@
         </button>
 
         <button
+          disabled
           *ngIf="stepPosition == 2"
-          style="background-color: #00344D;margin-left: 15px"
+          style="background-color: #00344d; margin-left: 15px"
           type="button"
           (click)="gerarPdf()"
           class="btn btn-dark btn-sm"
         >
-          {{'newNC.stepper.generatePDF'| translate}}
+          {{ "newNC.stepper.generatePDF" | translate }}
         </button>
       </div>
     </div>
@@ -52,7 +53,7 @@
         <div class="col-xl-6 pl-0 pr-0 pr-xl-3">
           <app-parceiro></app-parceiro>
         </div>
-        <div class="col-xl-6 pr-0 pl-0 pl-xl-3 mt-3 mt-xl-0 ">
+        <div class="col-xl-6 pr-0 pl-0 pl-xl-3 mt-3 mt-xl-0">
           <app-product></app-product>
         </div>
       </div>
