--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -67,11 +67,13 @@
           | translate
       }}</span>
       <div
-              class="d-flex flex-row ml-5"
-              *ngIf="this.nonComplicanceService.nc?.tipo_controle != 'PR'"
+        class="d-flex flex-row ml-5"
+        *ngIf="this.nonComplicanceService.nc?.tipo_controle != 'PR'"
       >
         <i class="bi bi-calculator"></i>
-        <span class="info-titulo">{{("global.number" | translate) + ": "+(returnNumber())}}</span>
+        <span class="info-titulo">{{
+          ("global.number" | translate) + ": " + returnNumber()
+        }}</span>
       </div>
       <div class="d-flex flex-row mt-2">
         <span class="info-dados">{{
@@ -185,6 +187,7 @@
 
   <div class="dados-parceiro col razao-social">
     <p-editor
+      styleClass="p-editor-override"
       [(ngModel)]="this.nonComplicanceService.nc.text_area_reject_point"
       [style]="{
         height: '100%',
