--- a/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/review-info-sgq/review-info-sgq.component.html
@@ -36,7 +36,11 @@
           <i class="bi bi-link-45deg"></i>
           {{ "about.sgqEvalComponent.recurrence.title" | translate }}
         </p>
-        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(0)">
+        <button
+          class="btn btn-dark red"
+          style="background-color: #00344d"
+          (click)="goToStepById(0)"
+        >
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -120,7 +124,11 @@
           <i class="pi pi-compass"></i>
           {{ "about.sgqEvalComponent.evidence" | translate }}
         </p>
-        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(1)">
+        <button
+          class="btn btn-dark red"
+          style="background-color: #00344d"
+          (click)="goToStepById(1)"
+        >
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -129,6 +137,7 @@
     <ng-template pTemplate="content">
       <div class="mb-5">
         <p-editor
+          styleClass="p-editor-override"
           [ngModel]="this.sgqServ.sgq.text_area1"
           [style]="editorStyle"
           [readonly]="true"
@@ -158,7 +167,11 @@
           <i class="pi pi-compass"></i>
           {{ "about.sgqEvalComponent.risks" | translate }}
         </p>
-        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(2)">
+        <button
+          class="btn btn-dark red"
+          style="background-color: #00344d"
+          (click)="goToStepById(2)"
+        >
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -166,6 +179,7 @@
     </ng-template>
     <ng-template pTemplate="content">
       <p-editor
+        styleClass="p-editor-override"
         [ngModel]="this.sgqServ.sgq.text_area2"
         [style]="editorStyle"
         [readonly]="true"
@@ -181,7 +195,11 @@
           <i class="bi bi-envelope-exclamation"></i>
           {{ "about.sgqEvalComponent.changes" | translate }}
         </p>
-        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(3)">
+        <button
+          class="btn btn-dark red"
+          style="background-color: #00344d"
+          (click)="goToStepById(3)"
+        >
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
@@ -189,6 +207,7 @@
     </ng-template>
     <ng-template pTemplate="content">
       <p-editor
+        styleClass="p-editor-override"
         [ngModel]="this.sgqServ.sgq.text_area3"
         [style]="editorStyle"
         [readonly]="true"
@@ -204,7 +223,11 @@
           <i class="bi bi-envelope"></i>
           {{ "global.contacts.notifications" | translate }}
         </p>
-        <button class="btn btn-dark red" style="background-color: #00344D;" (click)="goToStepById(4)">
+        <button
+          class="btn btn-dark red"
+          style="background-color: #00344d"
+          (click)="goToStepById(4)"
+        >
           <i class="bi bi-pencil mr-1"></i>
           {{ "global.edit" | translate }}
         </button>
