--- a/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
+++ b/src/app/pages/ncs/sgq-evaluation/steps/risks/risks.component.html
@@ -5,6 +5,7 @@
 
 <div class="mt-4">
   <p-editor
+    styleClass="p-editor-override"
     [(ngModel)]="this.sgqServ.sgq.text_area2"
     [style]="{ height: '20vh', 'font-size': '25px' }"
     [modules]="{ counter: { container: '#counterRc', unit: 'character' } }"
